--- a/food/platforms/android/assets/www/FoodUi.csproj
+++ b/food/platforms/android/assets/www/FoodUi.csproj
@@ -61,8 +61,10 @@
     <Content Include=".idea\food.iml" />
     <Content Include=".jshintrc" />
     <Content Include="AddTemplates\AddParent.html" />
+    <Content Include="AddTemplates\newDish.js" />
     <Content Include="AddTemplates\fileLoad.html" />
     <Content Include="AddTemplates\fileLoad.js" />
+    <Content Include="AddTemplates\newLoacation.js" />
     <Content Include="AddTemplates\photo.js" />
     <Content Include="app.yaml" />
     <Content Include="cat.jpg" />
