--- a/FoodApi/FoodApi/bin/FoodApi.dll.config
+++ b/FoodApi/FoodApi/bin/FoodApi.dll.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="foodEntities" connectionString="metadata=res://*/Food.csdl|res://*/Food.ssdl|res://*/Food.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GILAD-PC\SQLEXPRESS;initial catalog=food;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--dev-->
+    <!--<add name="foodEntities" connectionString="metadata=res://*/Food.csdl|res://*/Food.ssdl|res://*/Food.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GILAD-PC\SQLEXPRESS;initial catalog=food;persist security info=True;user id=sa;password=1234qweR;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--prod-->
+    <add name="foodEntities" connectionString="metadata=res://*/Food.csdl|res://*/Food.ssdl|res://*/Food.msl;provider=System.Data.SqlClient;provider connection string= &quot;Data Source=184.168.194.64;Initial Catalog=food;Persist Security Info=True;User ID=gilad;Password=1234qweR;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
