--- a/FoodApi/FoodApi/FoodApi.csproj
+++ b/FoodApi/FoodApi/FoodApi.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Controllers\LocationController.cs" />
     <Compile Include="Controllers\LunchBoxController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\ValuesController1.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
