--- a/FoodUi/FoodUi.csproj
+++ b/FoodUi/FoodUi.csproj
@@ -70,6 +70,7 @@
     <Content Include="cat.jpg" />
     <Content Include="cordova.js" />
     <Content Include="cordova_plugins.js" />
+    <Content Include="facebookConnectPlugin - Copy.js" />
     <Content Include="index3.html" />
     <Content Include="indexphot.html" />
     <Content Include="js\angular-ui-router.js" />
